// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Controlled 1`] = `
<style>
  .radio-group-controlled-button__group {
          display: flex;
          gap: var(--ds-size-2);
        }
</style>
<fieldset aria-labelledby="<generated> <generated>">
  <legend id="<generated>">
    Utdanningsnivå
  </legend>
  <p id="<generated>">
    Velg det høyeste utdanningsnivået du har fullført.
  </p>
  <ds-field data-clickdelegatefor="<generated>">
    <input
      type="radio"
      value="kindergarten"
      name="<generated>"
      id="<generated>"
    >
    <label
      data-weight="regular"
      for="<generated>"
    >
      Barnehage
    </label>
  </ds-field>
  <ds-field data-clickdelegatefor="<generated>">
    <input
      type="radio"
      value="primary"
      name="<generated>"
      id="<generated>"
    >
    <label
      data-weight="regular"
      for="<generated>"
    >
      Grunnskole
    </label>
  </ds-field>
  <ds-field data-clickdelegatefor="<generated>">
    <input
      type="radio"
      value="secondary"
      name="<generated>"
      id="<generated>"
    >
    <label
      data-weight="regular"
      for="<generated>"
    >
      Videregående
    </label>
  </ds-field>
  <ds-field data-clickdelegatefor="<generated>">
    <input
      type="radio"
      value="higher"
      name="<generated>"
      id="<generated>"
    >
    <label
      data-weight="regular"
      for="<generated>"
    >
      Høyere utdanning
    </label>
  </ds-field>
</fieldset>
<div>
  <hr aria-hidden="true">
  <p>
    Du har valgt:
  </p>
  <div>
    <button
      data-variant="secondary"
      type="button"
    >
      Velg Barnehage
    </button>
    <button
      data-variant="secondary"
      type="button"
    >
      Velg Grunnskole
    </button>
  </div>
</div>
`;

exports[`Default 1`] = `
<fieldset aria-labelledby="<generated>">
  <legend id="<generated>">
    Velg din aldersgruppe
  </legend>
  <ds-field data-clickdelegatefor="<generated>">
    <input
      type="radio"
      value="10-20"
      name="my-group"
      id="<generated>"
    >
    <label
      data-weight="regular"
      for="<generated>"
    >
      10-20 år
    </label>
  </ds-field>
  <ds-field data-clickdelegatefor="<generated>">
    <input
      type="radio"
      value="21-45"
      name="my-group"
      id="<generated>"
    >
    <label
      data-weight="regular"
      for="<generated>"
    >
      21-45 år
    </label>
  </ds-field>
  <ds-field data-clickdelegatefor="<generated>">
    <input
      type="radio"
      value="46-80"
      name="my-group"
      id="<generated>"
    >
    <label
      data-weight="regular"
      for="<generated>"
    >
      46-80 år
    </label>
  </ds-field>
  <p
    data-field="validation"
    hidden
    id="<generated>"
  >
  </p>
</fieldset>
`;

exports[`Disabled 1`] = `
<fieldset aria-labelledby="<generated> <generated>">
  <legend id="<generated>">
    Velg din aldersgruppe
  </legend>
  <p id="<generated>">
    Informasjonen blir brukt til å tilpasse innholdet på siden.
  </p>
  <ds-field data-clickdelegatefor="<generated>">
    <input
      disabled
      type="radio"
      value="10-20"
      name="my-disabled"
      id="<generated>"
    >
    <label
      data-weight="regular"
      for="<generated>"
    >
      10-20 år
    </label>
  </ds-field>
  <ds-field data-clickdelegatefor="<generated>">
    <input
      disabled
      type="radio"
      value="21-45"
      name="my-disabled"
      id="<generated>"
    >
    <label
      data-weight="regular"
      for="<generated>"
    >
      21-45 år
    </label>
  </ds-field>
  <ds-field data-clickdelegatefor="<generated>">
    <input
      disabled
      type="radio"
      value="46-80"
      name="my-disabled"
      id="<generated>"
    >
    <label
      data-weight="regular"
      for="<generated>"
    >
      46-80 år
    </label>
  </ds-field>
  <p
    data-field="validation"
    hidden
    id="<generated>"
  >
  </p>
</fieldset>
`;

exports[`Group 1`] = `
<fieldset aria-labelledby="<generated> <generated>">
  <legend id="<generated>">
    Velg din aldersgruppe
  </legend>
  <p id="<generated>">
    Informasjonen blir brukt til å tilpasse innholdet på siden.
  </p>
  <ds-field data-clickdelegatefor="<generated>">
    <input
      type="radio"
      value="10-20"
      name="my-group"
      id="<generated>"
    >
    <label
      data-weight="regular"
      for="<generated>"
    >
      10-20 år
    </label>
  </ds-field>
  <ds-field data-clickdelegatefor="<generated>">
    <input
      type="radio"
      value="21-45"
      name="my-group"
      id="<generated>"
    >
    <label
      data-weight="regular"
      for="<generated>"
    >
      21-45 år
    </label>
  </ds-field>
  <ds-field data-clickdelegatefor="<generated>">
    <input
      type="radio"
      value="46-80"
      name="my-group"
      id="<generated>"
    >
    <label
      data-weight="regular"
      for="<generated>"
    >
      46-80 år
    </label>
  </ds-field>
  <p
    data-field="validation"
    hidden
    id="<generated>"
  >
  </p>
</fieldset>
`;

exports[`Outline 1`] = `
<fieldset aria-labelledby="<generated> <generated>">
  <legend id="<generated>">
    Velg din aldersgruppe
  </legend>
  <p id="<generated>">
    Informasjonen blir brukt til å tilpasse innholdet på siden.
  </p>
  <ds-field
    data-variant="outline"
    data-clickdelegatefor="<generated>"
  >
    <input
      type="radio"
      value="10-20"
      name="my-group"
      id="<generated>"
    >
    <label
      data-weight="regular"
      for="<generated>"
    >
      10-20 år
    </label>
  </ds-field>
  <ds-field
    data-variant="outline"
    data-clickdelegatefor="<generated>"
  >
    <input
      type="radio"
      value="21-45"
      name="my-group"
      id="<generated>"
    >
    <label
      data-weight="regular"
      for="<generated>"
    >
      21-45 år
    </label>
  </ds-field>
  <ds-field
    data-variant="outline"
    data-clickdelegatefor="<generated>"
  >
    <input
      type="radio"
      value="46-80"
      name="my-group"
      id="<generated>"
    >
    <label
      data-weight="regular"
      for="<generated>"
    >
      46-80 år
    </label>
  </ds-field>
  <p
    data-field="validation"
    hidden
    id="<generated>"
  >
  </p>
</fieldset>
`;

exports[`Read Only 1`] = `
<fieldset aria-labelledby="<generated> <generated>">
  <legend id="<generated>">
    Velg din aldersgruppe
  </legend>
  <p id="<generated>">
    Informasjonen blir brukt til å tilpasse innholdet på siden.
  </p>
  <ds-field data-clickdelegatefor="<generated>">
    <input
      readonly
      type="radio"
      value="10-20"
      name="my-readonly"
      id="<generated>"
    >
    <label
      data-weight="regular"
      for="<generated>"
    >
      10-20 år
    </label>
  </ds-field>
  <ds-field data-clickdelegatefor="<generated>">
    <input
      readonly
      type="radio"
      value="21-45"
      name="my-readonly"
      id="<generated>"
    >
    <label
      data-weight="regular"
      for="<generated>"
    >
      21-45 år
    </label>
  </ds-field>
  <ds-field data-clickdelegatefor="<generated>">
    <input
      readonly
      type="radio"
      value="46-80"
      name="my-readonly"
      id="<generated>"
    >
    <label
      data-weight="regular"
      for="<generated>"
    >
      46-80 år
    </label>
  </ds-field>
  <p
    data-field="validation"
    hidden
    id="<generated>"
  >
  </p>
</fieldset>
`;

exports[`With Error 1`] = `
<fieldset aria-labelledby="<generated> <generated>">
  <legend id="<generated>">
    Velg din aldersgruppe
  </legend>
  <p id="<generated>">
    Informasjonen blir brukt til å tilpasse innholdet på siden.
  </p>
  <ds-field data-clickdelegatefor="<generated>">
    <input
      aria-describedby="<generated> <generated>"
      aria-invalid="true"
      type="radio"
      value="10-20"
      name="my-error"
      id="<generated>"
    >
    <label
      data-weight="regular"
      for="<generated>"
    >
      10-20 år
    </label>
  </ds-field>
  <ds-field data-clickdelegatefor="<generated>">
    <input
      aria-describedby="<generated> <generated>"
      aria-invalid="true"
      type="radio"
      value="21-45"
      name="my-error"
      id="<generated>"
    >
    <label
      data-weight="regular"
      for="<generated>"
    >
      21-45 år
    </label>
  </ds-field>
  <ds-field data-clickdelegatefor="<generated>">
    <input
      aria-describedby="<generated> <generated>"
      aria-invalid="true"
      type="radio"
      value="46-80"
      name="my-error"
      id="<generated>"
    >
    <label
      data-weight="regular"
      for="<generated>"
    >
      46-80 år
    </label>
  </ds-field>
  <p
    data-field="validation"
    id="<generated>"
  >
    Du må velge en aldersgruppe
  </p>
</fieldset>
`;
